Implement tab info

--- a/app/src/main/res/layout/activity_show_movie.xml
+++ b/app/src/main/res/layout/activity_show_movie.xml
@@ -41,7 +41,8 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_scrolling" />
+    <!-- <include layout="@layout/content_scrolling" /> -->
+    <include layout="@layout/content_scrolling_tab" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
