--- a/app/src/main/res/layout/fragment_plot.xml
+++ b/app/src/main/res/layout/fragment_plot.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".PlotFragment">
+    tools:context=".ui.PlotFragment">
 
     <TextView
         android:id="@+id/tvPlot"
